--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,3 +19,13 @@ deploy-development:
         - kubectl rollout restart deployment game-makao-backend-dev --namespace=capgemini
     only:
         - main
+
+cleanup-development:
+    image: ubuntu
+    stage: cleanup
+    script:
+        - apt-get update && apt-get install -y curl
+        - curl -v -X POST https://backend-dev.capgemini.enl-projects.com/rooms/sync-rooms-in-game-backend/macau
+        - sleep 2
+    only:
+        - main
